--- a/index.html
+++ b/index.html
@@ -33,13 +33,8 @@
         <div class="content-section contact-info">
             <h2>Informações de Contato</h2>
             <ul>
-                <li><a href="mailto:email@escola.com">E-mail</a></li>
-                <li><a href="tel:+551100000000">Telefone</a></li>
+                <li><a href="nathaly.quadros@escola.pr.gov">E-mail</a></li>
             </ul>
-        </div>
-
-        <div class="content-section">
-            <a href="#" class="button">Enviar</a>
         </div>
     </main>
 
