--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <div class="content-section">
             <h2>Explicação sobre o Projeto</h2>
-            <p>Este projeto consiste em criar um site simples usando HTML e CSS para exibir informações sobre um aluno, seu professor, série/turma e a data de entrega de uma atividade. O código foi estruturado para ser claro, modular e fácil de entender. A página é dividida em cabeçalho, corpo principal e rodapé, sendo que cada seção tem um propósito específico.</p>
+            <p>Este projeto consiste em criar um site simples usando HTML e CSS para exibir informações sobre um aluno, seu professor, série/turma e a data de entrega de uma atividade. O código foi estruturado para ser claro, modular e fácil de entender. A página é dividida em cabeçalho, corpo principal e rodapé, sendo que cada sessão tem um propósito específico.</p>
 
             <p>No HTML, utilizamos tags como <strong>&lt;header&gt;</strong>, <strong>&lt;main&gt;</strong> e <strong>&lt;footer&gt;</strong> para organizar o conteúdo de maneira semântica. Dentro do <strong>&lt;header&gt;</strong>, colocamos o nome da escola, enquanto no <strong>&lt;main&gt;</strong> são apresentadas as informações do aluno. No <strong>&lt;footer&gt;</strong>, incluímos um aviso de direitos autorais.</p>
 
